--- a/Products/index.html
+++ b/Products/index.html
@@ -97,12 +97,12 @@
         <div class="2xl:container mx-auto">
             <div class="w-[90%] mx-auto grid grid-cols">
                 <div class="flex  flex-col justify-center items-center space-y-5 fade-in-bottom">
-                    <h2 class="text-[25px] leading-[26px] font-bold text-center">Kasthuri Manjal Powder</h2>
+                    <h2 class="text-[25px] leading-[26px] font-bold text-center">Kasthuri Turmeric Powder</h2>
                     <img src="https://ik.imagekit.io/Prakashprojects/Pickel%20shop%20Project/Products/Center%20banner.jpg?updatedAt=1750561639047"
                         alt="" class=" h-[300px] w-[300px] md:h-[500px] md:w-[500px]">
                     <p
                         class="bg-[#008000]  p-1 w-[250px] md:w-[500px] text-center text-[#fff] text-[23px] font-medium ">
-                        Manjal Powder   ₹20 </p>
+                        Turmeric Powder   ₹20 </p>
                     <button class=" bg-black text-[20px] leading-[20px] font-normal text-white text-center p-3 rounded-md">Place
                         Order</button>
                 </div>
